updated dependencies and added the latest SSH key upload support
